backends/typescript/src/snapshots/ridl_backend_ts__tests__enumset_standalone_form.snap
---
source: backends/typescript/src/tests.rs
expression: ts_for(decls)
---
export type WarningFlags = number & { readonly __ridl: 'veh.common.WarningFlags' };

export const WarningFlagsBits = {
  LOW_FUEL: 1,
  CHECK_ENGINE: 2,
  DOOR_OPEN: 4,
  SEATBELT: 8,
} as const;

export function initWarningFlags(): WarningFlags {
  return 0 as WarningFlags;
}
