backends/typescript/src/snapshots/ridl_backend_ts__tests__enumset_u64_width_brands_bigint.snap
---
source: backends/typescript/src/tests.rs
expression: source
---
export type WideFlags = bigint & { readonly __ridl: 'veh.common.WideFlags' };

export const WideFlagsBits = {
  LOW: 1n,
  TOP: 9223372036854775808n,
} as const;

export function initWideFlags(): WideFlags {
  return 0n as WideFlags;
}
