backends/typescript/src/snapshots/ridl_backend_ts__tests__fixed_and_bounded_arrays.snap
---
source: backends/typescript/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export interface Samples {
  /**
   * @bounds 8
   */
  readings: readonly Speed[];
  /**
   * @bounds 2..8
   */
  history: readonly Speed[];
}

export function initSamples(): Samples {
  return {
    readings: Array.from({ length: 8 }, () => initSpeed()),
    history: Array.from({ length: 2 }, () => initSpeed()),
  };
}
