backends/typescript/src/snapshots/ridl_backend_ts__tests__named_scalar_backings.snap
---
source: backends/typescript/src/tests.rs
expression: ts_for(decls)
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export type Counter = number & { readonly __ridl: 'veh.common.Counter' };

export function initCounter(): Counter {
  return 0 as Counter;
}

export type Enabled = boolean & { readonly __ridl: 'veh.common.Enabled' };

export function initEnabled(): Enabled {
  return false as Enabled;
}

export type Label = string & { readonly __ridl: 'veh.common.Label' };

export function initLabel(): Label {
  return '' as Label;
}

export type Blob = Uint8Array & { readonly __ridl: 'veh.common.Blob' };

export function initBlob(): Blob {
  return new Uint8Array(0) as Blob;
}
